--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,40 @@
-﻿aenum
-aiohttp
-aiosignal
-annotated-types
-async-timeout
-attrs
-beautifulsoup4
-blinker
-certifi
-charset-normalizer
-click
-colorama
-Deprecated
-Flask
-frozenlist
-future
-idna
-itsdangerous
-Jinja2
-line-bot-sdk
-MarkupSafe
-multidict
-pydantic
-pydantic_core
-python-dateutil
-python-dotenv
-requests
-six
-soupsieve
-typing_extensions
-ujson
-urllib3
-Werkzeug
-wrapt
-yarl
-
+aenum==3.1.16
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-types==0.7.0
+attrs==25.4.0
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+Deprecated==1.3.1
+distlib==0.4.0
+dotenv==0.9.9
+filelock==3.20.0
+Flask==3.1.2
+frozenlist==1.8.0
+future==1.0.0
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+line-bot-sdk==3.21.0
+MarkupSafe==3.0.3
+multidict==6.7.0
+platformdirs==4.5.1
+propcache==0.4.1
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+requests==2.32.5
+six==1.17.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+ujson==5.11.0
+urllib3==2.6.2
+virtualenv==20.35.4
+Werkzeug==3.1.4
+wrapt==2.0.1
+yarl==1.22.0
